# auto-forex-web-service

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  DEPLOYMENT.md  DEVELOPMENT.md  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml  init-letsencrypt.sh  pyrightconfig.json  release-please-config.json  test_api_endpoints.py  test_view_directly.py  update_views_celery_filter.py
backend/: .dockerignore  .env.example  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  debug_backtest.py  main.py  manage.py  openapi.yaml  pyproject.toml  pytest.ini  setup.cfg  test_db.sqlite3-journal
backend/accounts/: __init__.py  admin.py  admin_user_views.py  apps.py  authentication.py  email_utils.py  jwt_utils.py  middleware.py  models.py  oanda_validator.py  permissions.py  rate_limiter.py  serializers.py  settings_helper.py  signals.py  task_status_view.py  tasks.py  timezone_utils.py  urls.py  views.py  websocket_auth.py
backend/accounts/management/: __init__.py
backend/accounts/migrations/: 0001_initial.py  0002_add_system_settings.py  0003_oandaaccount_jurisdiction.py  0004_add_position_differentiation_fields.py  0005_add_email_verification.py  0006_add_email_whitelist.py  0007_add_system_settings_fields.py  0008_add_aws_credential_methods.py  0009_add_oanda_sync_interval.py  0010_add_is_default_to_oanda_account.py  0011_add_oanda_fetch_duration.py  0012_alter_systemsettings_oanda_fetch_duration_days.py  0013_replace_s3_bucket_with_athena_settings.py  0014_add_athena_instruments.py  0015_add_tick_data_instruments.py  0016_add_system_health_update_interval.py  0017_add_athena_query_timeout.py  0018_add_backtest_resource_limits.py  0019_add_external_api_check_interval.py  0020_add_backtest_day_batch_size.py  0021_add_celery_task_time_limits.py  0022_add_s3_data_source_settings.py  0023_add_trading_metrics_interval.py  0024_remove_celery_time_limit_settings.py
backend/apps/: __init__.py
backend/apps/accounts/: admin.py  api_logging.py  apps.py  auth.py  authentication.py  jwt_utils.py  middleware.py  models.py  openapi.py  permissions.py  rate_limiter.py  request_logging.py  schema.py  security_logger.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/common/: __init__.py  querying.py
backend/apps/health/: apps.py  urls.py  views.py
backend/apps/market/: __init__.py  admin.py  apps.py  enums.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/trading/: __init__.py  admin.py  apps.py  broker_gateway.py  dataclasses.py  engine.py  enums.py  events.py  in_memory_execution.py  logging.py  models.py  money.py  order.py  order_client_ids.py  order_repositories.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/config/: __init__.py  asgi.py  celery.py  responses.py  routing.py  settings.py  settings_e2e.py  settings_test.py  system.yaml  urls.py  version.py  wsgi.py
backend/config/settings_parts/: __init__.py  celery.py  logging.py  rest.py  security.py
backend/config/tasks/: __init__.py  db_backup.py
backend/docs/: API_DOCUMENTATION.md  CLEANUP_SUMMARY.md  CODE_DOCUMENTATION.md  api.html
backend/scripts/: __init__.py  check_openapi_schema.py  ci_pytest.py  generate_api_docs.py  import_athena_data.py  restart_container.sh
backend/tests/: __init__.py  conftest.py  settings_test.py  test_account_balance_fetching.py  test_accounts_models.py  test_adx_strategy.py  test_arbitrage_strategy.py  test_asian_range_strategy.py  test_athena_import_integration.py  test_athena_import_progress.py  test_atr_calculator.py  test_backtest_completion.py  test_backtest_logger.py  test_backtest_models.py  test_backtest_performance.py  test_backtest_resource_limits.py  test_backtest_task.py  test_backtest_task_api.py  test_backtest_task_execution.py  test_breakout_strategy.py  test_candle_data_view.py  test_config_loader.py  test_event_models.py  test_floor_strategy.py  test_floor_strategy_registration.py  test_fundamental_technical_strategy.py  test_health_check.py  test_historical_data_loader.py  test_jwt_middleware.py  test_log_persistence_properties.py  test_london_breakout_strategy.py  test_ma_crossover_strategy.py  test_macd_strategy.py  test_macd_strategy_registration.py  test_market_data_consumer.py  test_market_data_streamer.py  test_market_data_streaming_tasks.py  test_mean_reversion_strategy.py  test_news_spike_strategy.py  test_oanda_account_crud.py  (+40 more)
backend/tests/contract/: test_openapi_snapshot.py
backend/tests/e2e/: __init__.py  conftest.py  helpers.py  plugin_api_report.py  test_task_execution_flows.py
backend/tests/integration/: __init__.py  base.py  conftest.py  factories.py  test_infrastructure.py
backend/tests/manual/: __init__.py  test_snowball_visual.py
backend/trading/: __init__.py  admin.py  admin_notification_service.py  admin_urls.py  admin_views.py  adx_strategy.py  apps.py  arbitrage_strategy.py  asian_range_strategy.py  athena_import_task.py  atr_calculator.py  backtest_engine.py  backtest_models.py  backtest_task_models.py  backtest_task_serializers.py  backtest_task_views.py  backtest_views.py  base_strategy.py  breakout_strategy.py  candle_views.py  consumers.py  demo_market_data.py  enums.py  event_logger.py  event_models.py  event_views.py  execution_models.py  floor_strategy.py  fundamental_technical_strategy.py  health_check.py  health_views.py  historical_data_loader.py  host_access_monitor.py  london_breakout_strategy.py  ma_crossover_strategy.py  macd_strategy.py  market_config_views.py  market_data_streamer.py  mean_reversion_strategy.py  models.py  (+37 more)
backend/trading/migrations/: 0001_initial.py  0002_add_event_logging_models.py  0003_backtest_backtestresult_and_more.py  0004_add_tick_data_model.py  0006_add_strategy_comparison_model.py  0009_add_enum_fields.py  0011_add_strategy_config_model.py  0013_backtest_task_model.py  0014_tradingtask.py  (+4 more)
backend/trading_system/: __init__.py  asgi.py  celery.py  config_loader.py  routing.py  settings.py  settings_test.py  urls.py  wsgi.py
(+1981 files in other folders)
