[project]
name = "trading-system"
version = "0.1.0"
description = "Auto Forex Trading System Backend"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<5.3",
    "djangorestframework>=3.15.0",
    "channels>=4.1.0",
    "channels-redis>=4.2.0",
    "daphne>=4.1.0",
    "v20>=3.0.25",
    "boto3>=1.35.0",
    "celery>=5.4.0",
    "django-celery-beat>=2.7.0",
    "redis>=5.0.0",
    "django-redis>=5.4.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-django>=4.9.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.8.0",
    "flake8>=7.1.0",
    "mypy>=1.11.0",
    "pylint>=3.3.0",
    "django-stubs>=5.1.0",
    "djangorestframework-stubs>=3.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trading_system"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "trading_system.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[[tool.mypy.overrides]]
module = [
    "v20.*",
    "celery.*",
    "channels.*",
    "channels_redis.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "trading_system.settings"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "manage.py",
    "*/asgi.py",
    "*/wsgi.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pylint.main]
ignore = ["migrations", "tests"]
ignore-patterns = ["test_.*?.py"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "invalid-name",
    "no-member",  # Django models have dynamic attributes
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "pk"]

[tool.pylint.design]
max-attributes = 15
max-args = 10
