[project]
name = "trading-system"
version = "0.1.0"
description = "Auto Forex Trader Backend"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<5.3",
    "djangorestframework>=3.15.0",
    "channels>=4.1.0",
    "channels-redis>=4.2.0",
    "daphne>=4.1.0",
    "v20>=3.0.25",
    "boto3>=1.35.0",
    "celery>=5.4.0",
    "django-celery-beat>=2.7.0",
    "redis>=5.0.0",
    "django-redis>=5.4.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "cryptography>=43.0.0",
    "psutil>=6.1.0",
    "requests>=2.32.0",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-django>=4.9.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.8.0",
    "hypothesis>=6.100.0",
    "black>=24.8.0",
    "flake8>=7.1.0",
    "flake8-pyproject>=1.2.0",
    "mypy>=1.11.0",
    "pylint>=3.3.0",
    "pylint-django>=2.6.0",
    "django-stubs>=5.1.0",
    "djangorestframework-stubs>=3.15.0",
    "pre-commit>=4.0.0",
    "isort>=5.13.0",
    "bandit>=1.7.0",
    "flake8-bugbear>=24.0.0",
    "flake8-comprehensions>=3.15.0",
    "flake8-simplify>=0.21.0",
    "interrogate>=1.7.0",
    "types-PyYAML>=6.0.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings_test"
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--reuse-db",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
    "-n=auto",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
(
    /\\.tox
    | /\\.venv
    | /build
    | /dist
    | /migrations
)
'''

[tool.mypy]
python_version = "3.13"
exclude = '(^|/)(\.venv|venv|tests)/'
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.pyright]
exclude = ["tests"]

[[tool.mypy.overrides]]
module = [
    "v20.*",
    "celery.*",
    "channels.*",
    "channels_redis.*",
    "psutil.*",
    "redis.*",
    "boto3.*",
    "botocore.*",
    "hypothesis.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "manage.py",
    "*/asgi.py",
    "*/wsgi.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pylint.main]
ignore = ["migrations", "tests", ".venv", "venv"]
ignore-patterns = ["test_.*?.py"]
ignore-paths = [".*/\\.venv/.*", ".*/venv/.*", ".*/tests/.*"]
extension-pkg-allow-list = ["psutil", "redis"]
load-plugins = ["pylint_django"]
django-settings-module = "config.settings"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "invalid-name",
    "no-member",  # Django models have dynamic attributes
    "duplicate-code",  # Migrations and models naturally have similar code
    "broad-exception-caught",  # W0718: Catching Exception is acceptable for error handling
    "logging-fstring-interpolation",  # W1203: f-strings in logging are acceptable
    "fixme",  # W0511: TODO comments are acceptable
    "import-outside-toplevel",  # C0415: Lazy imports are acceptable to avoid circular imports
    "redefined-outer-name",  # W0621: Acceptable in some contexts
    "too-many-positional-arguments",  # R0917: Acceptable for some functions
    "too-many-lines",  # C0302: Large data loading modules naturally have many lines
]

[tool.pylint.typecheck]
ignored-modules = ["psutil", "redis"]

[tool.pylint.format]
max-line-length = 100

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    "build",
    "dist",
    "migrations",
    "*.egg-info",
]
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401",
]
max-complexity = 20

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "pk"]

[tool.pylint.design]
max-attributes = 15
max-args = 10

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_django = "django"
known_first_party = ["config", "apps", "apps.trading", "apps.accounts"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.bandit]
exclude_dirs = [".venv", "tests", "migrations"]
skips = ["B101", "B601"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 0
exclude = ["setup.py", "docs", "build", "migrations", "tests"]
verbose = 0
quiet = false
whitelist-regex = []
color = true

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
    "types-pyjwt>=1.7.1",
]
